--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
             type="image/x-icon"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Font Roboto -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+            rel="stylesheet"
+        />
+
         <title>Your Contact Book</title>
     </head>
     <body>
