--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             rel="stylesheet"
         />
 
-        <title>Your Contact Book</title>
+        <title>Contact Book</title>
     </head>
     <body>
         <div id="root"></div>
